--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -59,7 +59,7 @@
                         <p>Pokud vás zajímá více o mé hudbě, můžete ji prozkoumat také na <a href="https://music.pgersl.xyz">mých stránkách</a>.</p>
                     </div>
                     <div class="contact-option" id="zvazvedu">
-                        <p>Máte dotaz o Zvaž vědu!, zájem o spolupráci s námi nebo podnět ohledně účetnictví kontaktujte mě:</p>
+                        <p>Máte dotaz o Zvaž vědu!, zájem o spolupráci s námi nebo podnět ohledně účetnictví? Kontaktujte mě:</p>
                         <p>
                             <i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:petrgersl@zvazvedu.cz">petrgersl@zvazvedu.cz</a><br>
                             <i class="fa-solid fa-phone"></i>&nbsp;&nbsp;<a href="tel:+420731347915">+420 731 347 915</a><br>
